--- a/package.json
+++ b/package.json
@@ -1,5 +1,54 @@
 {
-  "dependencies": {
-    "@rnv/template-starter": "0.37.3"
-  }
+    "devDependencies": {
+        "typescript": "4.9.5",
+        "@types/react": "18.2.6",
+        "@types/react-dom": "~18.2.4",
+        "@types/react-native": "~0.67.2",
+        "@flexn/typescript-config": "1.0.0",
+        "@flexn/assets-renative-outline": "0.3.2",
+        "rnv": "0.37.3-rc.1",
+        "@rnv/template-starter": "0.37.3",
+        "@rnv/engine-rn": "0.37.3-rc.1",
+        "@rnv/engine-rn-tvos": "0.37.3-rc.1",
+        "@rnv/engine-rn-next": "0.37.3-rc.1",
+        "@rnv/engine-rn-web": "0.37.3-rc.1",
+        "@rnv/engine-rn-electron": "0.37.3-rc.1",
+        "xcode": "2.1.0",
+        "jetifier": "1.6.5"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "resolutions": {
+        "@babel/traverse": "7.15.0"
+    },
+    "name": "theotest",
+    "version": "0.1.0",
+    "dependencies": {
+        "raf": "3.4.1",
+        "@rnv/renative": "0.37.3-rc.1",
+        "react": "18.2.0",
+        "react-art": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-native": "0.67.2",
+        "react-native-gesture-handler": "2.9.0",
+        "@react-native-community/cli-platform-ios": "^6.0.0",
+        "@react-native-community/cli": "^6.0.0",
+        "react-native-tvos": "0.66.3-1",
+        "react-native-web": "0.18.9",
+        "next": "12.1.6",
+        "react-native-theoplayer": "3.0.2",
+        "theoplayer": "6.2.1",
+        "@theoplayer/react-native-drm": "1.2.0",
+        "@theoplayer/react-native-ui": "^0.2.0"
+    }
 }
